--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "bulma": "^0.9.4",
     "graphql": "^16.9.0",
-    "graphql-request": "^7.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
